2009-11-19  Till Kamppeter <till.kamppeter@gmail.com>

	* printer/Lexmark-C734.xml, printer/Lexmark-C736.xml,
	  printer/Lexmark-TG654.xml, printer/Lexmark-W850.xml,
	  printer/Lexmark-X203n.xml, printer/Lexmark-X204n.xml,
	  printer/Lexmark-X264dn.xml, printer/Lexmark-X363dn.xml,
	  printer/Lexmark-X364dn.xml, printer/Lexmark-X364dw.xml,
	  printer/Lexmark-X463de.xml, printer/Lexmark-X464de.xml,
	  printer/Lexmark-X466de.xml, printer/Lexmark-X466dte.xml,
	  printer/Lexmark-X466dwe.xml, printer/Lexmark-X651de.xml,
	  printer/Lexmark-X652de.xml, printer/Lexmark-X654de.xml,
	  printer/Lexmark-X656de.xml, printer/Lexmark-X658de.xml,
	  printer/Lexmark-X734de.xml, printer/Lexmark-X736de.xml,
	  printer/Lexmark-X738de.xml, printer/Lexmark-X860de.xml,
	  printer/Lexmark-X862de.xml, printer/Lexmark-X864de.xml: Added
	  printer XML files for the new Lexmark PPD files.

2009-11-19  Luchee Go <gol@lexmark.com>

	* PPD/Lexmark/Lexmark_C734.ppd,
	PPD/Lexmark/Lexmark_C736.ppd,
	PPD/Lexmark/Lexmark_TG654.ppd,
	PPD/Lexmark/Lexmark_W850.ppd,
	PPD/Lexmark/Lexmark_X203n.ppd,
	PPD/Lexmark/Lexmark_X204n.ppd,
	PPD/Lexmark/Lexmark_X264dn.ppd,
	PPD/Lexmark/Lexmark_X363dn.ppd,
	PPD/Lexmark/Lexmark_X364dn.ppd,
	PPD/Lexmark/Lexmark_X364dw.ppd,
	PPD/Lexmark/Lexmark_X463de.ppd,
	PPD/Lexmark/Lexmark_X464de.ppd,
	PPD/Lexmark/Lexmark_X466de.ppd,
	PPD/Lexmark/Lexmark_X466dte.ppd,
	PPD/Lexmark/Lexmark_X466dwe.ppd,
	PPD/Lexmark/Lexmark_X651de.ppd,
	PPD/Lexmark/Lexmark_X652de.ppd,
	PPD/Lexmark/Lexmark_X654de.ppd,
	PPD/Lexmark/Lexmark_X656de.ppd,
	PPD/Lexmark/Lexmark_X658de.ppd,
	PPD/Lexmark/Lexmark_X734de.ppd,
	PPD/Lexmark/Lexmark_X736de.ppd,
	PPD/Lexmark/Lexmark_X738de.ppd,
	PPD/Lexmark/Lexmark_X860de.ppd,
	PPD/Lexmark/Lexmark_X862de.ppd,
	PPD/Lexmark/Lexmark_X864de.ppd: Uploaded Lexmark PPD files

2009-11-18  Till Kamppeter <till.kamppeter@gmail.com>

	* driver/Postscript-Lexmark.xml: Updated license.

2009-11-17  Till Kamppeter <till.kamppeter@gmail.com>
