@@ -1,0 +1,48 @@
+<printer id="printer/HP-LaserJet_P2055dn">
+  <make>HP</make>
+  <model>LaserJet P2055dn</model>
+  <mechanism>
+    <laser/><!--not "color"-->
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://h10010.www1.hp.com/wwpc/pscmisc/vac/us/product_pdfs/3662052.pdf</url>
+  <lang>
+    <postscript level="3" />
+    <pcl level="6"/>
+    <pjl/>
+    <text>
+      <charset>us-ascii</charset>
+    </text>
+  </lang>
+  <autodetect>
+    <usb>
+      <commandset>PJL,POSTSCRIPT,PCL,PCLXL</commandset>
+      <description>HP LaserJet P2055dn</description>
+      <manufacturer>Hewlett-Packard</manufacturer>
+      <model>HP LaserJet P2055dn</model>
+    </usb>
+  </autodetect>
+  <functionality>A</functionality>
+  <driver>hplip</driver>
+  <drivers>
+    <driver>
+      <id>hplip</id>
+    </driver>
+  </drivers>
+  <!--verified-->
+  <!--no "contrib_url"-->
+  <comments>
+    <en>
+    Postscript level 3 and duplex out of the box, USB connection.
+
+    P2055dn is the duplex and network version of P2055.
+
+    For basic printing functionality use the Postscript PPD.
+    </en>
+  </comments>
+</printer>
