@@ -1,3 +1,8 @@
+2009-11-23  Till Kamppeter <till.kamppeter@gmail.com>
+
+	* db/source/printer/HP-LaserJet_P2055dn.xml: Added HP LaserJet P2055dn
+	  (bug #181).
+
 2009-11-19  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* printer/Lexmark-C734.xml, printer/Lexmark-C736.xml,
